19-02-20 Added Pagination ( Test )

--- a/FlaskServer/templates/manufacture.html
+++ b/FlaskServer/templates/manufacture.html
@@ -1,5 +1,7 @@
 {% extends 'main_base.html' %}
 {% block head %}
+<script src="../static/js/lib/jquery.twbsPagination.js"></script>
+<script src="../static/js/lib/jquery.twbsPagination.min.js"></script>
 <script>
     function make_main_specific_table(list) {
         console.log("Get Specific List : \n" + list);
@@ -100,7 +102,7 @@
         if (specific_row != undefined && specific_row != 'None') {
             console.log(" 바꿔야행 ");
             make_main_manufacture_table(rows);
-            make_main_specific_table(rows);
+            //make_main_specific_table(rows);
         } else if (rows == undefined) {
             console.log('Main Table length is empty');
         } else {
@@ -125,9 +127,55 @@
         );
     }
 
+    function pagination_test() {
+        $('#pagination').twbsPagination({
+            /*
+            totalPages: totalPages,  // 전체 page블럭 수
+            visiblePages: visibleBlock,  // 출력될 page 블럭수 상수로 지정해 줘도 되고, 변수로 지정해줘도 된다.
+            */
+            totalPages: 35,
+            visiblePages: 5,
+            prev: "이전",
+            next: "다음",
+            first: '<span aria-hidden="true">«</span>',
+            last: '<span aria-hidden="true">»</span>',
+            onPageClick: function (event, page) {
+                $('#page-content').text('페이지 ' + page);
+                //paging(page);
+            }
+        });
+
+        // Class를 이용한 여러개 콘텐츠에 동기화하기
+        $('.sync-pagination').twbsPagination({
+            totalPages: 20,
+            onPageClick: function (evt, page) {
+                $('#content').text('Page ' + page);
+            }
+        });
+    }
+
+    function paging(page) {
+        $('#list-body').empty();
+        var startRow = (page - 1) * pageSize; // + 1 list는 0부터 시작하니깐;
+        var endRow = page * pageSize;
+        if (endRow > totalCount) {
+            endRow = totalCount;
+        }
+        var startPage = ((page - 1) / visibleBlock) * visibleBlock + 1;
+        var endPage = startPage + visibleBlock - 1;
+        if (endPage > totalPages) {    //
+            endPage = totalPages;
+        }
+        for (var j = startRow; j < endRow; j++) {
+            $('#list-body').append('' + chatLogList[j].fileNo + '<a onclick="getContent(\'' + chatLogList[j].fileName + '\')">'
+                + textLengthOverCut(chatLogList[j].fileName, '25', '...') + '</a>' + chatLogList[j].fileDate + '');
+        }
+    }
+
     $(document).ready(function () {
         insert_manufacture_table();
         main_manufacture_table();
+        pagination_test();
     });
 </script>
 {% endblock %}
@@ -135,6 +183,17 @@
 {% block body_title %}Title{% endblock %}
 {% block main_title %}생산 화면{% endblock %}
 {% block body %}
+<div class="text-center center-block">
+    <div id="content">page 1</div>
+    <ul class="sync-pagination pagination-sm" style="justify-content: center;"></ul>
+</div>
+<div class="text-center">
+    <div id="page-content">페이지 1</div>
+    <nav aria-label="Page navigation">
+        <ul class="pagination" id="pagination" style="justify-content: center;"></ul>
+    </nav>
+</div>
+<hr/>
 <input hidden id="main_rows" value="{{ object.manufacture_list() }}"/>
 <input hidden id="specific_list" value="{{ specific_list }}"/>
 <form class="form-inline" action="/" method="POST">
@@ -157,7 +216,7 @@
         </tr>
         </thead>
         <tbody>
-            <!--  Call of the Java Script Function (table) -->
+        <!--  Call of the Java Script Function (table) -->
         </tbody>
     </table>
 </div>
@@ -175,7 +234,7 @@
         </tr>
         </thead>
         <tbody>
-            <!--  Call of the Java Script Function (table) -->
+        <!--  Call of the Java Script Function (table) -->
         </tbody>
     </table>
 </div>
